--- a/src/styles/blocks/_sec5.scss
+++ b/src/styles/blocks/_sec5.scss
@@ -96,6 +96,10 @@
         min-height: 57px;
         width: 48%;
 
+        p {
+            width: 100%;
+        }
+
         @include media(w768) {
             width: 100%;
         }
