--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,11 +10,13 @@
 @import "blocks/btn-block";
 @import "blocks/btn";
 @import "blocks/input";
+@import "blocks/form";
 
 @import "blocks/sec";
 @import "blocks/header";
 @import "blocks/container";
 @import "blocks/footer";
+@import "blocks/thanks";
 
 @import "blocks/sec1";
 @import "blocks/sec2";
