--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,6 +4,7 @@ block vars
     - var title = 'Main'
 
 block content
+    include templates/form
     include templates/sec1
     include templates/sec2
     include templates/sec3
