--- a/src/views/templates/footer.pug
+++ b/src/views/templates/footer.pug
@@ -21,5 +21,5 @@ footer.footer
         div.footer__block.footer__block_contacts
             a(href="tel:88635002012").footer__phone.
                 8 863 500-20-12
-            a(href="").footer__link.footer__link_getcall.
+            a(href="").footer__link.footer__link_getcall.js-small-btn.
                 Заказать звонок
