--- a/src/views/templates/sec2.pug
+++ b/src/views/templates/sec2.pug
@@ -3,7 +3,7 @@ section.sec.sec2
         div.btn-block.sec2__btn-block.ta-center
             p.text.text_xl.btn-block__title.
                 Сколько времени и денег нужно на открытие бизнеса? Придётся ли самостоятельно бегать по судам? Узнайте ответы в презентации
-            a(href="").btn-round.btn-block__btn
+            a(href="").btn-round.btn-block__btn.js-small-btn
                 span.btn-round__text.
                     Скачать презентацию
                 svg.icon.icon-svg--icon-download.btn-round__icon
