--- a/src/views/templates/sec4.pug
+++ b/src/views/templates/sec4.pug
@@ -1,6 +1,6 @@
 section.sec.sec4
     div.container.ta-center
-        a(href="").btn-round.sec4__btn
+        a(href="").btn-round.sec4__btn.js-small-btn
             span.btn-round__text.
                 Узнать подробнее
         p.heading.heading_m.sec4__heading.
