--- a/src/views/templates/sec5.pug
+++ b/src/views/templates/sec5.pug
@@ -5,7 +5,7 @@ section.sec.sec5
                 Команда компании – это 20 узких специалистов во всех сферах права. Клиенты выбирают нас за комплексную защиту и возможность следить за движением их дела онлайн.
             div.btn-block__border.sec5__btn-block-border
                 |Станьте владельцем компании «Век закона» в своём городе уже через 4 недели
-                a(href="").btn-round.btn-block__btn.sec5__btn-block-btn
+                a(href="").js-small-btn.btn-round.btn-block__btn.sec5__btn-block-btn
                     span.btn-round__text.
                         Узнать подробнее
         div.color-white.ta-center
