--- a/src/views/templates/sec6.pug
+++ b/src/views/templates/sec6.pug
@@ -2,7 +2,7 @@ section.sec.sec6
     div.container.sec6__container.ta-center
         p.heading.heading_s.sec6__heading.
             Узнайте полный состав франшизы из презентации:
-        a(href="").btn-round.btn-block__btn
+        a(href="").btn-round.btn-block__btn.js-small-btn
             span.btn-round__text.
                 Скачать и узнать
             svg.icon.icon-svg--icon-download.btn-round__icon
@@ -24,9 +24,9 @@ section.sec.sec6
                             на франшизу
                     li.sec6__block-list-item
                         p.sec6__block-list-heading.
-                            95 000 <span>Ᵽ</span>
+                            60 000 <span>Ᵽ</span>
                         p.text.text_m.
-                            на ремонт офиса
+                            рублей на аренду офиса и вывеску
                 p.text.text_m.
                     Все вложения окупятся уже на второй месяц работы
                 img(src="img/sec7-people.png", alt="").sec6__block-img
