--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -14,6 +14,7 @@ html {
 
 body {
     font-family: "PTSans", sans-serif;
+    overflow-x: hidden;
     position: relative;
     line-height: 1.2;
     min-width: 320px;
@@ -22,4 +23,8 @@ body {
 .icon-svg--icon-download {
     fill: transparent !important;
     stroke: white;
+}
+
+.wl-modal-open.wl-modal-open {
+  display: none !important;
 }
