--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -2,6 +2,7 @@
     @include link(white, white);
     background-color: $main-red;
     border: none;
+    cursor: pointer;
     outline: none;
     border-radius: 50px;
     display: inline-block;
@@ -18,6 +19,10 @@
         font-size: 18px;
     }
 
+    @include media(w500) {
+        padding: 8px 10px;
+    }
+
     &__text {
         display: inline-block;
         vertical-align: middle;
@@ -28,8 +33,13 @@
         vertical-align: middle;
         margin-left: 20px;
 
-         @include media(w768) {
+        @include media(w768) {
             margin-left: 10px;
+        }
+
+        @include media(w500) {
+            font-size: 1.5rem !important;
+            margin-right: 5px;
         }
     }
 }
