--- a/src/styles/blocks/_input.scss
+++ b/src/styles/blocks/_input.scss
@@ -8,17 +8,19 @@
     border: 1px solid $input-border;
     color: $input;
     font-size: 24px;
-    padding: 0 20px 0 60px;
+    padding: 0 20px 0 20px;
     height: 78px;
 
     &_city {
         background-image: url("../img/sec8-map.png");
         background-position: left 20px center;
+        padding-left: 60px;
     }
 
     &_phone {
         background-image: url("../img/sec8-icon-phone.png");
         background-position: left 18px center;
+        padding-left: 60px;
     }
 
     @include media(w1024) {
@@ -27,11 +29,33 @@
     }
 
     @include media(w768) {
+        font-size: 18px;
         margin-bottom: 30px;
         width: 340px;
     }
 
     @include media(w600) {
         width: 240px;
+    }
+}
+
+.select {
+    background-color: $input-bg;
+    background-repeat: no-repeat;
+    background-position: left 10px center;
+    border: 1px solid $input-border;
+    color: $input;
+    font-size: 24px;
+    padding: 0 20px 0 20px;
+    height: 78px;
+    width: 100%;
+
+    @include media(w1024) {
+        font-size: 22px;
+        height: 50px;
+    }
+
+    @include media(w768) {
+        font-size: 18px;
     }
 }
