--- a/src/views/templates/sec3.pug
+++ b/src/views/templates/sec3.pug
@@ -7,7 +7,7 @@ section.sec.sec3
                     В итоге с каждого вложенного миллиона застройщики незаконно зарабатывают
                 p.heading.heading_xl.btn-block__subtitle.color-gold.
                     до 200 000 в год!
-                a(href="").btn-round.btn-block__btn.sec3__btn
+                a(href="").btn-round.btn-block__btn.sec3__btn.js-small-btn
                     span.btn-round__text.
                         Узнать подробнее
         p.heading.heading_m.ta-center.sec3__heading.
@@ -24,7 +24,7 @@ section.sec.sec3
     div.sec3__bottom.color-white
         img(src="img/sec3-house.png", alt="").sec3__bottom-img
         div.container.sec3__bottom-container
-            img(src="img/header-logo.png", alt="").sec3__bottom-logo
+            img(src="img/sec3-logo.png", alt="").sec3__bottom-logo
             p.sec3__bottom-text.
                 защищает интересы дольщиков 
             p.heading.heading_l.sec3__bottom-note.
