--- a/src/views/templates/footer.pug
+++ b/src/views/templates/footer.pug
@@ -3,20 +3,20 @@ footer.footer
         p.footer__text.footer__text_copy.
             © Век закона, 2017<br> юридическая компания
         div.footer__block
-            a(href="").footer__text.footer__link.footer__link_politic.
+            a(href="doc/politic.pdf" target="_blank").footer__text.footer__link.footer__link_politic.
                 Политика<br> конфиденциальности
             div.footer__social
                 p.footer__social-title.
                     Мы в социальных сетях
                 ul.footer__social-list
                     li.footer__social-item
-                        a(href="").footer__link.footer__social-link
+                        a(href="https://vk.com/public111677186" target="_blank").footer__link.footer__social-link
                             i.fa.fa-vk
+                    //- li.footer__social-item
+                    //-     a(href="").footer__link.footer__social-link
+                    //-         i.fa.fa-twitter
                     li.footer__social-item
-                        a(href="").footer__link.footer__social-link
-                            i.fa.fa-twitter
-                    li.footer__social-item
-                        a(href="").footer__link.footer__social-link
+                        a(href="https://www.youtube.com/channel/UCN3J3tzKnkI9SwD2cnhCXNA4" target="_blank").footer__link.footer__social-link
                             i.fa.fa-youtube-play
         div.footer__block.footer__block_contacts
             a(href="tel:88635002012").footer__phone.
