--- a/src/views/thanks.pug
+++ b/src/views/thanks.pug
@@ -13,7 +13,7 @@ block content
                 p.thanks__block-note.
                     Мы постараемся связаться с Вами  в ближайшее время
             div.thanks__btn-wrap
-                a(href="").btn-round
+                a(href="doc/mk.pdf" target="_blank").btn-round
                     span.btn-round__text.
                         Скачать презентацию
                     svg.icon.icon-svg--icon-download.btn-round__icon
