--- a/src/views/templates/sec7.pug
+++ b/src/views/templates/sec7.pug
@@ -9,6 +9,7 @@ section.sec.sec7
                 div.sec7__btn-block-form
                     input(type="text" name="city" placeholder="Ваш город" required).input.input_city.sec7__btn-block-input
                     input(type="text" name="phone" placeholder="Ваш телефон").input.input_phone.sec7__btn-block-input.incomplete
+                    input(type="text" name="email" placeholder="Ваш e-mail").input.input_phone.sec7__btn-block-input
                 button.btn-round.sec7__btn.js-submit.js-big-btn
                     span.btn-round__text.
                         Проверить город
