--- a/src/styles/_sprite.scss
+++ b/src/styles/_sprite.scss
@@ -9,3 +9,39 @@
 	font-size:(30.7/10)*1rem;
 	width:(32/30.7)*1em;
 }
+.icon-svg--icon_1 {
+	font-size:(39.888/10)*1rem;
+	width:(41.601/39.888)*1em;
+}
+.icon-svg--icon_2 {
+	font-size:(41.6/10)*1rem;
+	width:(41.601/41.6)*1em;
+}
+.icon-svg--icon_3 {
+	font-size:(41.6/10)*1rem;
+	width:(41.6/41.6)*1em;
+}
+.icon-svg--icon_4 {
+	font-size:(41.6/10)*1rem;
+	width:(41.6/41.6)*1em;
+}
+.icon-svg--icon_5 {
+	font-size:(44.799/10)*1rem;
+	width:(50.357/44.799)*1em;
+}
+.icon-svg--icon_6 {
+	font-size:(44.729/10)*1rem;
+	width:(44.8/44.729)*1em;
+}
+.icon-svg--icon_7 {
+	font-size:(38.5/10)*1rem;
+	width:(38.5/38.5)*1em;
+}
+.icon-svg--icon_8 {
+	font-size:(38.5/10)*1rem;
+	width:(38.5/38.5)*1em;
+}
+.icon-svg--icon_9 {
+	font-size:(38.5/10)*1rem;
+	width:(38.5/38.5)*1em;
+}
