--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -29,6 +29,7 @@
     margin-top: 50px;
     margin-bottom: 30px;
     padding: 50px 50px 60px;
+    position: relative;
     width: 430px;
 
     @include media(w768) {
@@ -38,6 +39,35 @@
 }
 
 .form {
+
+    &__close {
+        cursor: pointer;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        height: 24px;
+        width: 24px;
+
+        &:before,
+        &:after {
+            content: "";
+            background-color: #7f7f7e;
+            margin-left: -1px;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 100%;
+            width: 2px;
+        }
+
+        &:before {
+            transform: rotate(45deg);
+        }
+
+        &:after {
+            transform: rotate(-45deg);
+        }
+    }
 
     &__heading {
         margin-bottom: 20px;
