--- a/src/styles/blocks/_sec2.scss
+++ b/src/styles/blocks/_sec2.scss
@@ -40,6 +40,9 @@
     }
 
     &__list-item {
+        transition: 0.8s ease;
+        transform: translateY(30px);
+        opacity: 0;
         margin-bottom: 50px;
         position: relative;
         width: 48%;
