--- a/src/styles/blocks/_sec3.scss
+++ b/src/styles/blocks/_sec3.scss
@@ -138,6 +138,9 @@
     }
 
     &__list-item {
+        transition: 0.8s ease;
+        transform: translateY(30px);
+        opacity: 0;
         display: flex;
         align-items: center;
         margin-bottom: 40px;
