--- a/src/views/templates/header.pug
+++ b/src/views/templates/header.pug
@@ -2,11 +2,11 @@ header.header
     div.container.header__container.color-white
         p.header__about.text.text_s.
             Франшиза<br> юридической компании
-        a(href="/lend/index.html").header__logo
+        a(href="/index.html").header__logo
             img(src="img/header-logo.png", alt="").header__logo-img
         div.header__contacts
-            a(href="tel:84732324568").header__phone.title.title_xs.
-                +7 (473) 232-45-68
+            a(href="tel:84955325045").header__phone.title.title_xs.
+                +7 (495) 532-50-45
             br
             a(href="").header__get-call.text.text_xs.js-small-btn.
                 Заказать звонок
