--- a/src/views/templates/sec7.pug
+++ b/src/views/templates/sec7.pug
@@ -3,7 +3,7 @@ section.sec.sec7
         p.heading.heading_m.sec7__heading.
             Откройте бизнес, который будет приносить пользу обществу, а вам – 3 млн рублей чистой прибыли ежегодно
         div.btn-block.sec7__btn-block
-            form#bottomForm.btn-block__border.sec7__btn-block-border.js-form-city
+            form#bottomForm(onSubmit="yaCounter44889175.reachGoal('order');return true;").btn-block__border.sec7__btn-block-border.js-form-city
                 p.text.text_m.sec7__btn-block-text.
                     Все вложения окупятся уже на второй месяц работы.
                 div.sec7__btn-block-form
