--- a/src/views/thanks.pug
+++ b/src/views/thanks.pug
@@ -1,7 +1,7 @@
 extends templates/layout
 
 block vars
-    - var title = 'Thanks'
+    - var title = 'Век Закона'
 
 block content
     section.sec.thanks
@@ -18,7 +18,7 @@ block content
                         Скачать презентацию
                     svg.icon.icon-svg--icon-download.btn-round__icon
                         use(xlink:href="#svg--icon-download")
-                a(href="/lend/index.html").thanks__link.
+                a(href="/index.html").thanks__link.
                     Вернуться на сайт
             p.thanks__bottom-text.color-white.ta-center.text.text_l.
                 График работы с 9:00 до 18:00 Поэтому, если вы оставили заявку в нерабочее время, мы перезвоним вам на следующий рабочий день
