--- a/src/views/templates/form.pug
+++ b/src/views/templates/form.pug
@@ -3,7 +3,7 @@ div.form-wrap.form-wrap_small
         div.form__close
         p.heading.heading_xs.form__heading.
             Оставьте заявку на презентацию франшизы
-        form#smallForm.form(data-next="#bigForm")
+        form#smallForm.form(data-next="#bigForm" onSubmit="yaCounter44889175.reachGoal('order');return true;")
             input(type="text" name="name" placeholder="Ваше имя" required="").input.form__input
             input(type="text" name="phone" placeholder="Ваш телефон" required="").input.form__input
             input(type="email" name="email" placeholder="Ваш email" required="").input.form__input
